<resources>
    <string name="app_name">BUYR</string>
    <string name="lists_label">Lists</string>
    <string name="watchlist_label">Watchlist</string>
    <string name="options_label">Options</string>
    <string name="sign_in_label">Sign In</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="account_label">Account</string>
    <string name="preferred_label">Preferred Retailers</string>
    <string name="notifications_label">Notifications</string>
    <string name="email_placeholder">Email</string>
    <string name="appearance_label">Appearance</string>
    <string name="password_placeholder">Password</string>
    <string name="forgot_pwd_placeholder">Forgot Password?</string>
    <string name="register_placeholder">Register</string>
    <string name="confirm_pwd_placeholder">Confirm Password</string>
    <string name="terms_label">Terms and Conditions</string>
    <string name="new_list_title">New List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="skip_register">Skip</string>
    <string name="save_new_list_btn">Save</string>
    <string name="search_item_btn">Find</string>
    <string name="list_title">Title</string>
    <string name="list_desc">Description</string>
    <string name="new_item_title">New Item</string>
    <string name="new_item_search">Search for an item…</string>
    <string name="edit_list_btn_text">Edit List</string>
    <string name="addlist_error_msg_name">List name is required</string>
    <string name="additem_error_msg_name">Item name is required</string>
</resources>